@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19rc2
 
+	- The path for the "ln" command was hardcoded in
+	  Makedefs.in instead of being checked at configure time
+	  (STR #28).
 	- Banner pages containing unescaped { characters would
 	  not work.
 	- The printer-state-time collection attribute was
